# restaurant_menu

./: .env  .env_test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  config.py  docker-compose.yml  docker-compose_sync.yml  docker-compose_test.yml  pyproject.toml
admin/: .~lock.Menu.xlsx#  Menu.xlsx
menu_app/: config.py  crud.py  database.py  errors.py  main.py  models.py  schemas.py  services.py  training.py
menu_app/admin_utils/: discount.py  main_admin.py  parser.py  send_data.py
menu_app/cache/: cache_base.py  cache_invalidation.py  cache_subjects.py
menu_app/cruds/: counts.py  dish.py  errors.py  menu.py  submenu.py
menu_app/endpoints/: dish.py  dish_point.py  menu.py  menu_point.py  submenu.py  submenu_point.py  view_all.py
menu_app/repositories/: dish_repository.py  errors.py  menu_repository.py  submenu_repository.py  view_all_repository.py
menu_app/services/: cache.py  dish_service.py  menu_service.py  submenu_service.py  view_all_service.py
menu_app/tasks/: config_celery.py  tasks.py
menu_app/tests/: conftest.py  data.py  test_counts.py  test_dish.py  test_menu.py  test_submenu.py  test_view_all.py
migrations/: env.py
migrations/versions/: 9afcc77e082a_create_tables.py
tests/: conftest.py  test_dish.py  test_menu.py  test_submenu.py
