[tool.poetry]
name = "menu"
version = "0.1.0"
description = ""
authors = ["timosii <holdcarter@holdcarter.ru>"]
packages = [{include = "menu_app"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.19"
postgres = "^4.0"
sqlalchemy-orm = "^1.2.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
pydantic-settings = "^2.0.2"
pytest = "^7.4.0"
httpx = "^0.24.1"
redis = "^4.6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
